# opus-wave

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
benches/: celt_internal.rs  common.rs  dnn_bench.rs  encode_decode.rs
crates/opus/: Cargo.toml  README.md
crates/opus-celt/: Cargo.toml
crates/opus-celt/src/: encoder.rs  fft.rs
crates/opus-celt/tests/: encoder_roundtrip.rs
crates/opus-dnn/: Cargo.toml  build.rs
crates/opus-dnn/benches/: dnn_bench.rs
crates/opus-dnn/src/: burg.rs  freq.rs  lib.rs  pitchdnn.rs
crates/opus-dnn/src/dred/: decoder.rs  encoder.rs  mod.rs  rdovae_dec.rs  rdovae_enc.rs  stats.rs
crates/opus-dnn/src/fargan/: mod.rs
crates/opus-dnn/src/lpcnet/: enc.rs  plc.rs
crates/opus-dnn/src/nndsp/: adacomb.rs  adaconv.rs  adashape.rs  mod.rs
crates/opus-dnn/src/nnet/: conv2d.rs  linear.rs  mod.rs  ops.rs  weights.rs
crates/opus-dnn/src/osce/: bbwenet.rs  common.rs  features.rs  lace.rs  mod.rs  nolace.rs
crates/opus-dnn/tests/: blob_loading.rs
crates/opus-ffi/: Cargo.toml  build.rs
crates/opus-ffi/src/: lib.rs
crates/opus-range-coder/: Cargo.toml
crates/opus-silk/: Cargo.toml
crates/opus-silk/src/: decode_params.rs  encoder.rs  noise_shape_analysis.rs  nsq_del_dec.rs  pitch_analysis.rs  signal_processing.rs  stereo_encode.rs
crates/opus-silk/src/encoder_flp/: dsp.rs
crates/opus/benches/: celt_internal.rs  common.rs
crates/opus/src/: decoder.rs  dnn_decoder.rs  dnn_silk_bridge.rs  dnn_types.rs  encoder.rs  multistream_encoder.rs
crates/opus/tests/: c_reference_encode.rs  celt_bands_tests.rs  cross_validate.rs  dnn_model_tests.rs  dnn_nnet_tests.rs  dnn_pitchdnn_layers.rs  dnn_sparse_linear.rs  ffi_layer1_tests.rs  flp_analysis_tests.rs  silk_gain_test.rs  silk_lbrr_tests.rs  silk_nsq_deldec_tests.rs  silk_pitch_tests.rs  silk_stereo_tests.rs
crates/opus/tests/common/: mod.rs
tests/: a2nlsf_comparison.rs  c_reference_encode.rs  celt_bands_tests.rs  celt_encoder_roundtrip.rs  celt_fft_tests.rs  celt_lpc_tests.rs  celt_mathops_tests.rs  celt_mdct_tests.rs  celt_pitch_tests.rs  celt_quant_energy_tests.rs  celt_rate_tests.rs  correctness_vs_c.rs  cross_validate.rs  dnn_blob_loading.rs  dnn_model_tests.rs  dnn_nnet_tests.rs  dnn_pitchdnn_layers.rs  dnn_sparse_linear.rs  ffi_layer1_tests.rs  flp_analysis_tests.rs  flp_dsp_tests.rs  flp_frame_tests.rs  flp_wrapper_tests.rs  gain_match_test.rs  range_coder_roundtrip.rs  silk_gain_test.rs  silk_lbrr_tests.rs  silk_nsq_deldec_tests.rs  silk_pitch_tests.rs  silk_stereo_tests.rs
