[workspace]
members = [
    "crates/opus-ffi",
]
resolver = "3"

[package]
name = "opus-rust"
version = "3.0.0"
edition = "2024"
description = "Opus audio codec decoder in pure Rust"
keywords = ["audio", "codec", "VoIP", "streaming"]
categories = ["multimedia::encoding", "multimedia::audio"]
repository = "https://github.com/chastabor/opus-rust"
readme = "README.md"
license = "COPYING"

[features]
default = []
dnn          = ["dnn-dred", "dnn-osce", "dnn-deep-plc"]
dnn-deep-plc = []
dnn-dred     = ["dnn-deep-plc"]
dnn-osce     = []

[dependencies]

[dev-dependencies]
opus-ffi = { version = "3.0.0", path = "crates/opus-ffi" }
criterion = { version = "0.5", features = ["html_reports"] }

[lints.rust]
unsafe-code = "forbid"

[lints.clippy]
too-many-arguments = "allow"

[[bench]]
name = "encode_decode"
harness = false

[[bench]]
name = "c_reference"
harness = false

[[bench]]
name = "celt_internal"
harness = false

[[bench]]
name = "dnn_bench"
harness = false
required-features = ["dnn"]
