[package]
name = "opus-dnn"
version = "2.2.2"
edition = "2024"
description = "DNN inference runtime for Opus audio codec (DRED, OSCE, deep PLC)"
license = "BSD-3-Clause"
publish = false

[features]
default = ["dred", "osce", "deep-plc"]
deep-plc = []
dred = ["deep-plc"]
osce = []

[dependencies]
opus-celt = { version = "2.2.2", path = "../opus-celt" }
opus-range-coder = { version = "2.2.2", path = "../opus-range-coder" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dnn_bench"
harness = false

[lints.rust]
unsafe-code = "forbid"

[lints.clippy]
too-many-arguments = "allow"
# Float constants must match C reference exactly for bit-identical output.
excessive-precision = "allow"
